[gd_scene load_steps=19 format=2]

[ext_resource path="res://sprites/L3_forest/town/unicorn_room/unicorn_room_eye_whites-min.png" type="Texture" id=1]
[ext_resource path="res://hitnhurtboxes/TransitionZone.tscn" type="PackedScene" id=2]
[ext_resource path="res://Brains/SpawnPoint.tscn" type="PackedScene" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/2.0 - Forest/town/jail/unicorn_room.gd" type="Script" id=6]
[ext_resource path="res://sprites/L3_forest/town/unicorn_room/unicorn_room_floor_lit-min.png" type="Texture" id=7]
[ext_resource path="res://sprites/L3_forest/town/unicorn_room/unicorn_room_bright-min.png" type="Texture" id=8]
[ext_resource path="res://Cameras/PuppyCamera.tscn" type="PackedScene" id=9]
[ext_resource path="res://sprites/L3_forest/town/unicorn_room/unicorn_room_wall_lit-min.png" type="Texture" id=10]
[ext_resource path="res://sprites/L3_forest/town/unicorn_room/unicorn_room_dark-min.png" type="Texture" id=11]
[ext_resource path="res://sprites/L3_forest/town/unicorn_room/unicorn_room_iris-min.png" type="Texture" id=12]
[ext_resource path="res://Characters/scholar_bingus.tscn" type="PackedScene" id=13]
[ext_resource path="res://hitnhurtboxes/hurtbox.tscn" type="PackedScene" id=15]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 92.3055, 34.1028 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 75.6036, 34.3637 )

[sub_resource type="Animation" id=3]
resource_name = "Creepy"
length = 6.0
loop = true
tracks/0/type = "method"
tracks/0/path = NodePath("YSort/scholar_bingus")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/keys = {
"times": PoolRealArray( 0, 3, 3.1, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "down"
}, {
"args": [  ],
"method": "right"
}, {
"args": [  ],
"method": "up"
}, {
"args": [  ],
"method": "left"
} ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("bgstuff/walls/unicorn_room_eye_whites-min/unicorn_room_iris-min:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1.9, 3, 3.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 51.2029, -241.689 ), Vector2( 51.2029, -241.689 ), Vector2( 49.5208, -235.325 ), Vector2( 49.5208, -235.325 ), Vector2( 51.2029, -241.689 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("YSort/scholar_bingus/AnimatedSprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3, 3.1, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ "down", "right", "up", "left" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bgstuff/walls/unicorn_room_wall_lit-min:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.9, 3.1, 5.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0431373 ), Color( 1, 1, 1, 0.0431373 ), Color( 1, 1, 1, 0.658824 ), Color( 1, 1, 1, 0.658824 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("YSort/scholar_bingus:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 911.831, 582.956 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("YSort/scholar_bingus:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("bgstuff/walls/unicorn_room_dark-min:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"
tracks/0/type = "value"
tracks/0/path = NodePath("YSort/scholar_bingus:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("YSort/scholar_bingus:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2203.01, 356.682 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("bgstuff/walls/unicorn_room_dark-min:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("bgstuff/walls/unicorn_room_eye_whites-min/unicorn_room_iris-min:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 51.2029, -241.689 ) ]
}

[node name="unicorn_room" type="Node2D"]
script = ExtResource( 6 )
__meta__ = {
"_edit_vertical_guides_": [ -913.058 ]
}

[node name="BG" parent="." instance=ExtResource( 4 )]
margin_left = -1179.78
margin_top = -2610.06
margin_right = 4395.22
margin_bottom = 2997.94

[node name="bgstuff" type="Node2D" parent="."]

[node name="walls" type="Node2D" parent="bgstuff"]
position = Vector2( 914.201, 558.142 )

[node name="unicorn_room_eye_whites-min" type="Sprite" parent="bgstuff/walls"]
texture = ExtResource( 1 )

[node name="unicorn_room_iris-min" type="Sprite" parent="bgstuff/walls/unicorn_room_eye_whites-min"]
position = Vector2( 51.2029, -241.689 )
texture = ExtResource( 12 )

[node name="unicorn_room_bright-min" type="Sprite" parent="bgstuff/walls"]
visible = false
texture = ExtResource( 8 )

[node name="unicorn_room_floor_lit-min" type="Sprite" parent="bgstuff/walls"]
texture = ExtResource( 7 )

[node name="unicorn_room_wall_lit-min" type="Sprite" parent="bgstuff/walls"]
modulate = Color( 1, 1, 1, 0.0431373 )
texture = ExtResource( 10 )

[node name="unicorn_room_dark-min" type="Sprite" parent="bgstuff/walls"]
modulate = Color( 0.682353, 0.701961, 0.764706, 1 )
position = Vector2( -1, 1 )
texture = ExtResource( 11 )

[node name="YSort" type="YSort" parent="."]

[node name="player" parent="YSort" instance=ExtResource( 5 )]
position = Vector2( 910.359, 984.914 )
MAX_SPEED = 300
camera = NodePath("../../PuppyCamera")

[node name="scholar_bingus" parent="YSort" instance=ExtResource( 13 )]
visible = false
position = Vector2( 2203.01, 356.682 )

[node name="AnimatedSprite" parent="YSort/scholar_bingus" index="0"]
frame = 1

[node name="PuppyCamera" parent="." instance=ExtResource( 9 )]
position = Vector2( 436.776, -516.806 )

[node name="UpperLeft" parent="PuppyCamera/Limits" index="0"]
position = Vector2( 43.9899, 101.711 )

[node name="BottomRight" parent="PuppyCamera/Limits" index="1"]
position = Vector2( 1808.43, 1176.58 )

[node name="FG" type="Node2D" parent="."]
position = Vector2( 4.24261, 0 )

[node name="bottomSP" parent="." instance=ExtResource( 3 )]
position = Vector2( 813.407, 987.08 )

[node name="bottomTZ" parent="." instance=ExtResource( 2 )]
position = Vector2( 859.117, 1466.04 )

[node name="CollisionShape2D" parent="bottomTZ" index="0"]
position = Vector2( -31.9238, -361.515 )
shape = SubResource( 1 )

[node name="Collisions" type="Node2D" parent="."]

[node name="StaticBody2D" type="StaticBody2D" parent="Collisions"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Collisions/StaticBody2D"]
position = Vector2( -364.371, -195.162 )
polygon = PoolVector2Array( 1122.35, 1389.64, 1124.35, 739.635, 1428.35, 741.635, 1430.35, 1201.64, 1284.35, 1203.64, 1284.35, 1485.64, 2062.35, 1133.64, 1222.35, 221.635, 684.348, 941.635 )

[node name="HurtBox" parent="Collisions" instance=ExtResource( 15 )]
position = Vector2( 803.273, 565.685 )
collision_layer = 16

[node name="CollisionShape2D" parent="Collisions/HurtBox" index="0"]
position = Vector2( 759.433, -93.3381 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/Creepy = SubResource( 3 )
anims/default = SubResource( 4 )

[connection signal="transition_triggered" from="bottomTZ" to="." method="_on_bottomTZ_transition_triggered"]
[connection signal="area_entered" from="Collisions/HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="YSort/scholar_bingus"]
[editable path="PuppyCamera"]
[editable path="bottomTZ"]
[editable path="Collisions/HurtBox"]
